* localized enum dropdown * localization demo with lanauge selection

--- a/src/MvcDemos/Resources/Translations.nl-BE.resx
+++ b/src/MvcDemos/Resources/Translations.nl-BE.resx
@@ -120,4 +120,7 @@
   <data name="Action" xml:space="preserve">
     <value>Action nl</value>
   </data>
+  <data name="ChooseYourLanguage" xml:space="preserve">
+    <value>Kies uw taal</value>
+  </data>
 </root>
